--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 <body>
 
 <div class="quiz-container">
-    <h1>🇮🇳 Introduction to Indian Administration Quiz (30 MCQs)</h1>
-    <p>Based on the Syllabus: Utkranti & Constitutional Context, Personnel, Finance, Integrity, and Contemporary Issues.</p>
+    <h1>Introduction to Indian Administration Quiz (30 MCQs  30 marks.)</h1>
+    <p>Based on the Syllabus.</p>
     
     <form id="quizForm">
         <div class="user-details">
@@ -186,7 +186,7 @@
         </div>
         
         <div class="question" id="q14">
-            <p>14. भारतामध्ये **अर्थसंकल्पाची** प्रक्रिया कोणत्या महिन्यामध्ये सुरू होते? (The **Budgetary** process in India typically begins in which month?)</p>
+            <p>14. भारतामध्ये **अर्थसंकल्प संसदेत मांडण्याची** प्रक्रिया कोणत्या महिन्यामध्ये सुरू होते? (The **Process of presentation of Budget in the Parliament** in India typically begins in which month?)</p>
             <div class="options">
                 <label><input type="radio" name="q14" value="A"> January</label>
                 <label><input type="radio" name="q14" value="B"> February</label>
