--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
         .copy-instruction { color: red; font-size: 0.9em; margin-top: 10px; }
     </style>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XEJW88V3YG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XEJW88V3YG');
+</script>
 <body>
 
 <div class="quiz-container">
